--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,18 @@
 {
-  "compilerOptions": {
-    "allowJs": true,
-    "forceConsistentCasingInFileNames": true,
-    "incremental": true,
-    "esModuleInterop": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "outDir": "./dist",
-    "allowSyntheticDefaultImports": true,
-    "noImplicitAny": true,
-    "target": "ES6",
-    "types": [
-      "node"
-    ]
-  },
-  "include": [
-    "./src/**/*.ts",
-    "./test/**/*.ts"
-  ]
+    "compilerOptions": {
+        "allowJs": true,
+        "forceConsistentCasingInFileNames": true,
+        "incremental": true,
+        "esModuleInterop": true,
+        "module": "commonjs",
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "outDir": "./dist",
+        "allowSyntheticDefaultImports": true,
+        "noImplicitAny": true,
+        "target": "ES6",
+        "types": ["node"],
+        "experimentalDecorators": true
+    },
+    "include": ["./src/**/*.ts", "./test/**/*.ts"]
 }
