--- a/package.json
+++ b/package.json
@@ -11,15 +11,13 @@
     "author": "Christoph Fey",
     "license": "ISC",
     "dependencies": {
-        "class-transformer": "^0.5.1",
-        "class-validator": "^0.14.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongodb": "^6.17.0",
-        "nanoid": "^5.1.5",
         "supertest": "^7.1.1",
-        "tsx": "^4.19.4"
+        "tsx": "^4.19.4",
+        "zod": "^3.25.61"
     },
     "devDependencies": {
         "@types/cors": "^2.8.13",
